# Mandatory-I

./: .gitignore
1st Individual/: package-lock.json  package.json  pyproject.toml
1st Individual/Files/: data.csv  data.json  data.xml  data.yaml
1st Individual/nodejs/: csv_read.js  json_read.js  text_read.js  xml_read.js  yaml_read.js
1st Individual/python/: csv_read.py  json_read.py  text_read.py  xml_read.py  yaml_read.py
2nd Individual/: package-lock.json  package.json  pyproject.toml
2nd Individual/files/: data.json  data.txt  data.yaml
2nd Individual/node/: server.js
2nd Individual/python/: server.py
3rd Individual/: package-lock.json  package.json
3rd Individual/node/: index.js
3rd Individual/node/routes/: time.js
3rd Individual/python/: app.py
4th Individual/: package-lock.json  package.json  pyproject.toml
4th Individual/node/routes/: time.js
4th Individual/python/: app.py
